cabal-version:      3.0
name:               cardano-resolver
version:            1.0.0.0
synopsis:           Cardano-side resolver for ETH-to-Cardano atomic swaps
description:        
    This package provides Haskell implementations for the Cardano side of
    ETH-to-Cardano atomic swaps, including resolver logic, escrow management,
    and cross-chain coordination.

homepage:           https://github.com/SamkitSoni/defi-united-fusion-extension
license:            MIT
license-file:       LICENSE
author:             DeFi United
maintainer:         contact@defiunited.com
copyright:          2025 DeFi United
category:           Blockchain
build-type:         Simple
extra-doc-files:    CHANGELOG.md

-- Common warnings for all components
common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Resolver.CardanoResolver
        Resolver.ETHMonitor
        Resolver.SwapCoordinator
    
    build-depends:    
        base ^>=4.17.2.0,
        bytestring,
        containers,
        time,
        text,
        aeson
    
    hs-source-dirs:   src
    default-language: Haskell2010

executable cardano-resolver-monitor
    import:           warnings
    main-is:          Main.hs
    
    build-depends:
        base ^>=4.17.2.0,
        cardano-resolver,
        bytestring,
        text
    
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite cardano-resolver-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    
    build-depends:
        base ^>=4.17.2.0,
        cardano-resolver,
        hspec,
        QuickCheck
