cabal-version:      2.4
name:               fusion-resolver-cardano
version:            0.1.0.0
synopsis:           Cardano side of the Ethereum-Cardano cross-chain Fusion+ Resolver
description:        Handles atomic swaps between Ethereum and Cardano networks
license:            MIT
license-file:       LICENSE
author:             DeFi United
maintainer:         defi@united.com
category:           Blockchain
build-type:         Simple

common lang
    default-language: Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: lang
    exposed-modules:
        FusionResolverCardano
    build-depends:
        base >= 4.9 && < 5,
        aeson -any,
        bytestring -any,
        containers -any,
        freer-extras -any,
        playground-common -any,
        plutus-contract -any,
        plutus-ledger -any,
        plutus-ledger-api -any,
        plutus-ledger-constraints -any,
        plutus-tx -any,
        plutus-tx-plugin -any,
        plutus-script-utils -any,
        text -any,
        lens -any,
        serialise -any,
        cardano-api -any
    hs-source-dirs: .

executable fusion-resolver-cardano
    import: lang
    main-is: Main.hs
    build-depends:
        base >= 4.9 && < 5,
        fusion-resolver-cardano -any,
        plutus-contract -any,
        plutus-ledger -any,
        freer-extras -any,
        text -any
    hs-source-dirs: app

test-suite fusion-resolver-cardano-test
    import: lang
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Test.FusionResolverCardano
    build-depends:
        base >= 4.9 && < 5,
        fusion-resolver-cardano -any,
        plutus-contract -any,
        plutus-ledger -any,
        plutus-tx -any,
        tasty -any,
        tasty-hunit -any,
        text -any,
        lens -any
    hs-source-dirs: test
